--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.cvent</groupId>
     <artifactId>pangaea</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>pangaea</name>
@@ -97,7 +97,7 @@
         <url>https://github.com/cvent/pangaea</url>
         <connection>scm:git:git@github.com/cvent/pangaea.git</connection>
         <developerConnection>scm:git:git@github.com:cvent/pangaea.git</developerConnection>
-        <tag>pangaea-1.0.4</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
